Fixed vertical squishing behavior
Fixed middle and top sections from overlapping when shortening
verticle window height

--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@ body {
 .leftSide {
     display: flex;
     align-items: center;
-    max-height: 100vh;
+    min-height: 100vh;
     max-width: 38%;
-    min-width: 38%;
     position: relative;
-    overflow: hidden;
-    background-color: #af6639;
+    background-image: url("./background2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     min-width: 450px;
 }
 
@@ -49,22 +49,19 @@ body {
     white-space: nowrap; 
 }
 
-.backgroundImg {
-    height: 100%;
-}
-
 .rightSide {
     display: flex;
     flex-direction: column;
     display: flex;
     align-items: center;
     max-height: 100vh;
-    width: 62%;
+    width: 100%;
 }
 
 .top {
     align-items: flex-end;
-    height: 38%;
+    height: 35%;
+    min-height: 260px;
     background-color: #f4f4f4;
     font-size: 1.6rem;
     font-weight: bold;
@@ -76,15 +73,16 @@ body {
     align-items: flex-start;
     justify-content: center;
     gap: 20px;
-    height: 24%;
-    min-height: auto;
+    height: 30%;
+    min-height: 275px;
     background-color: #fefefe;
     padding-left: 40px;
 }
 
 .bottom {
     align-items: flex-start;
-    height: 38%;
+    height: 35%;
+    min-height: 35%;
     background-color: #f4f4f4;
     padding-top: 40px;
 }
@@ -99,9 +97,9 @@ body {
 
 .topTextbox {
     align-items: flex-start;
-    max-width: 75%;
     margin-left: 40px;
-    width: 575px;
+    display: inline-block;
+    width: 500px;
 }
 
 form {
@@ -154,7 +152,6 @@ input:focus:invalid {
     box-shadow: 0px 0px 5px grey;
 }
 
-
 .headerText{
     font-size: 1.7rem;
     font-weight: bold;
@@ -205,45 +202,18 @@ a {
     src: url(./ParchmentMf-Vqge.ttf) format("TrueType");
 }
 
-@media (max-width: 1100px) {
-    .top {
-        height: 30%;
-    }
 
-    .middle {
-        height: 40%;
-    }
-
-    .bottom {
-        height: 30%;
-    }
-
-    .topRowForm,
-    .middleRowForm,
-    .bottomRowForm {
-        flex-direction: column;
-    }
-
-    .rightSide {
-        max-width: calc(100vw - 450px);
-    }
-    
-    #error {
-        bottom: -5%;
-    }
-}
-
-@media (max-width: 800px) {
+@media (max-width: 455px) {
     body {
         flex-direction: column;
         width: 100vw;
-        max-width:100%
+        max-width: 100%;
+        overflow-y: scroll; 
     }
 
     .leftSide {
-        max-width: 100%;
+        height: 100%;
         width: 100%;
-        overflow: visible;
         min-width: 100%;
     }
 
@@ -254,6 +224,12 @@ a {
 
     .imageOverlay {
         top: 45%;
+    }
+
+    .topRowForm,
+    .middleRowForm,
+    .bottomRowForm {
+        flex-direction: column;
     }
 
     .top {
@@ -277,9 +253,9 @@ a {
     .bottom {
         min-width: 100%;
     }
-    
-    .backgroundImg {
-        overflow: hidden;
+
+    .topTextbox {
+        width: 75%;
     }
 
     .alreadyAccount {
